--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 			      <li class="nav-item">
 			        <a class="nav-link float-right" href="#teams">Team</a>
 			      </li>
+			       <li class="nav-item">
+			        <a class="nav-link float-right" href="#contact">Contact</a>
+			      </li>
 			    </ul>
 			  </div>
 		</nav>
@@ -57,14 +60,14 @@
 		</div>
 	</div>
 	<br>
-	<div class="container w3-animate-fading w3-padding-32"id="about">
+	<div class="container w3-animate-fading w3-padding-64"id="about">
 		<h1 class="w3-center display-4">About Us</h1>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
 		</p>
 	</div>
 	<hr>
-	<div  class="w3-container w3-black w3-padding-32" id="projects">
+	<div  class="w3-container w3-black w3-padding-64" id="projects">
 		<h1 class="w3-center display-4">Projects</h1>
 		<h2 class="display-5">Current Projects</h2>
 		<div class="row">
@@ -73,7 +76,6 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
@@ -83,7 +85,6 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
@@ -93,7 +94,6 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
@@ -103,7 +103,26 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+			</div>
+
+			<div class="col">
+				  <div class="w3-hover-opacity" id="card-8">
+				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+			</div>
+
+			<div class="col">
+				  <div class="w3-hover-opacity" id="card-8">
+				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
@@ -117,7 +136,6 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
@@ -127,7 +145,6 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
@@ -137,7 +154,6 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
@@ -147,55 +163,141 @@
 				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
 				  <div class="card-body">
 				    <h5 class="card-title">Card title</h5>
-				    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+			</div>
+
+			<div class="col">
+				  <div class="w3-hover-opacity" id="card-8">
+				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
+				    <a href="#" class="btn btn-primary">Go somewhere</a>
+				  </div>
+				</div>
+			</div>
+
+			<div class="col">
+				  <div class="w3-hover-opacity" id="card-8">
+				  <img src="https://picsum.photos/300/250" class="card-img-top" alt="...">
+				  <div class="card-body">
+				    <h5 class="card-title">Card title</h5>
 				    <a href="#" class="btn btn-primary">Go somewhere</a>
 				  </div>
 				</div>
 			</div>
 		</div>
 	</div>
-	<div class="w3-container w3-padding-32" id="gallery">
+
+	<div class="container w3-padding-64"id="inventory">
+		<h1 class="w3-center display-4">Equipments and Sensors</h1>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+		</p>
+		<a href="inventory.html">Visit the inventory to know more!!!</a>
+	</div>
+	<div class="w3-container w3-black w3-padding-64" id="gallery">
 		<h1 class="w3-center display-4">Gallery</h1>
 		<div>
 			<div class ="row">
 				<div class= "col">
-					<img class=" w3-hover-opacity rounded" src="https://picsum.photos/300/250">
+					<img class=" w3-hover-opacity rounded" src="https://picsum.photos/300/250" alt="...">
 				</div>
 
 				<div class= "col">
-					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250">
+					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250" alt="...">
 				</div>
 
 				<div class= "col">
-					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250">
+					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250" alt="...">
 				</div>
 
 				<div class= "col">
-					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250">
+					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250" alt="...">
 				</div>
 			</div>
 			<br>
 			<div class="row">
 				<div class= "col">
-					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250">
+					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250" alt="...">
 				</div>
 
 				<div class= "col">
-					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250">
+					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250" alt="...">
 				</div>
 
 				<div class= "col">
-					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250">
+					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250" alt="...">
 				</div>
 
 				<div class= "col">
-					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250">
+					<img class="rounded w3-hover-opacity" src="https://picsum.photos/300/250" alt="...">
 				</div>
 			</div>
 		</div>
 	</div>
 
-	<footer class="w3-container w3-padding-32 w3-center w3-opacity w3-light-grey w3-xlarge">
+	<div class="container w3-center w3-padding-64" id="teams">
+		<h1 class="display-4">Team</h1>
+		<div class="w3-center">
+			<img class="thick-border teams" src="https://picsum.photos/300/250" alt="...">
+			<h3>Prof Sudhir Kumar</h3>
+			<h3 class="display-5">PIC Tinkerers Lab</h3>
+		</div>
+		<div class="row">
+			<div class="col">
+				<img class="thick-border teams" src="https://picsum.photos/300/250" alt="...">
+				<h3>Manoj Kumar</h3>
+				<h3 class="display-5">Coordinator</h3>
+			</div>
+	
+			<div class="col">
+				<img class="thick-border teams" src="https://picsum.photos/300/250" alt="...">
+				<h3>Sumit Sourabh</h3>
+				<h3 class="display-5">Coordinator</h3>
+			</div>
+			<div class="col">
+				<img class="thick-border teams" src="https://picsum.photos/300/250" alt="...">
+				<h3>Md.Azam</h3>
+				<h3 class="display-5">Coordinator</h3>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col">
+				<img class="thick-border teams" src="https://picsum.photos/300/250" alt="...">
+				<h3>Akshat Jain</h3>
+				<h3 class="display-5">Sub-Coordinator</h3>
+			</div>
+	
+			<div class="col">
+				<img class="thick-border teams" src="https://picsum.photos/300/250" alt="...">
+				<h3>Aayush Shah</h3>
+				<h3 class="display-5">Sub-Coordinator</h3>
+			</div>
+			<div class="col">
+				<img class="thick-border teams" src="https://picsum.photos/300/250">
+				<h3>Akash Balaji</h3>
+				<h3 class="display-5">Sub-Coordinator</h3>
+			</div>
+			<div class="col">
+				<img class="thick-border teams" src="https://picsum.photos/300/250" alt="..."> 
+				<h3>Harsh Shah</h3>
+				<h3 class="display-5">Sub-Coordinator</h3>
+			</div>
+		</div>
+
+	</div>
+	
+
+	<footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge" id="contact">
+	  <h1 class="display-4">Contact Us</h1>
+	  <div class="container">
+			<p>
+				<b>Address</b>:R426 Block 6, Academic Area, IIT Patna-801103<br>
+				<b>Email Id</b>:tl_office@iitp.ac.in 
+			</p>	
+		</div>
 	  <i class="fa fa-facebook-official w3-hover-opacity"></i>
 	  <i class="fa fa-instagram w3-hover-opacity"></i>
 	  <i class="fa fa-linkedin w3-hover-opacity"></i>
