inventory page added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		</div>
 	</div>
 	<br>
-	<div class="container w3-animate-fading w3-padding-64"id="about">
+	<div class="container w3-animate-opacity w3-padding-64"id="about">
 		<h1 class="w3-center display-4">About Us</h1>
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -242,8 +242,8 @@
 		<h1 class="display-4">Team</h1>
 		<div class="w3-center">
 			<img class="thick-border teams" src="https://picsum.photos/300/250" alt="...">
-			<h3>Prof Sudhir Kumar</h3>
-			<h3 class="display-5">PIC Tinkerers Lab</h3>
+			<h3 class="display-5">Prof Sudhir Kumar</h3>
+			<h5 class="display-6">PIC Tinkerers Lab</h5>
 		</div>
 		<div class="row">
 			<div class="col">
