--- a/inventory.html
+++ b/inventory.html
@@ -8,12 +8,57 @@
 	<link rel="stylesheet" type="text/css" href="w3.css">
 	<link rel="stylesheet" href="bootstrap-4.4.1/css/bootstrap.min.css">
 	<script src="bootstrap-4.4.1/js/bootstrap.min.js"></script> 
+
 </head>
 <body>
+	<div>
+		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" data-spy="scroll" id="tlnav">
+			  <a class="navbar-brand" href="index.html">Tinkerers Lab</a>
+			  
+		</nav>
+	</div>
+		
+ 
+ 	<header class="gr-header">
+ 		<div class="container w3-center w3-padding-64">
+ 			<h1 class="display-3 w3-center">Tinkerers Lab Inventory</h1>	
+ 		</div>
+ 	</header>
 <h1 class="display-3 w3-center"></h1>
 <div class="container w3-center w3-padding-64">
-	<h1 class="display-3 w3-center">Tinkerers Lab Inventory</h1>
-	<button class="w3-button w3-white w3-border w3-border-red w3-round-large display-4 w3-padding-32"> Coming Soon</button>
+
+	<table class="table">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Sr.no</th>
+      <th scope="col">Component/Equipment</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Quantity Issued</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Arduino Mega</td>
+      <td>5</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Soldering Gun</td>
+      <td>2</td>
+      <td>0</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>LSA08</td>
+      <td>6</td>
+      <td>0</td>
+    </tr>
+  </tbody>
+</table>
+
+<button class="w3-button w3-white w3-border w3-border-red w3-round-large display-4"> Coming Soon</button>
 	
 </div>
 </body>
