container error correction

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-	<div>
+	<div class="w3-container">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" data-spy="scroll" id="tlnav">
 			  <a class="navbar-brand" href="#">Tinkerers Lab</a>
 			  <a class="w3-bar-item w3-button w3-padding w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
