container error correction

--- a/index.html
+++ b/index.html
@@ -19,8 +19,12 @@
 <body>
 	<div class="w3-container">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" data-spy="scroll" id="tlnav">
-			  <a class="navbar-brand" href="#">Tinkerers Lab</a>
-			  <a class="w3-bar-item w3-button w3-padding w3-hide-medium w3-hide-large w3-left" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+			  <a class="navbar-brand" href="#"><b>Tinkerers Lab</b></a>
+			  
+
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" href="javascript:void(0)" onclick="myFunction()">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
 
 			  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 			    <ul class="navbar-nav mr-auto">
