container error correction

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 <body>
-	<div class="w3-container">
+	<div class="container">
 		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" data-spy="scroll" id="tlnav">
 			  <a class="navbar-brand" href="#"><b>Tinkerers Lab</b></a>
 			  
@@ -62,7 +62,7 @@
 			</div>
 		</nav>
  	</div>
-	<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+	<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;" id="home">
 	  <img class="w3-image" src="main.jpg" alt="Hamburger Catering" width="1600" height="800">
 	  <div class="w3-display-left w3-padding-large">
     	<h1 class="w3-animate-opacity" style="color: #FF1493;font-size: 6vw;"><b>Tinkerers Lab</b></h1>
