container error correction

--- a/inventory.html
+++ b/inventory.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div>
-		<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark" data-spy="scroll" id="tlnav">
+		<nav class="navbar fixed-top navbar-dark bg-dark" id="tlnav">
 			  <a class="navbar-brand" href="index.html">Tinkerers Lab</a>
 			  
 		</nav>
@@ -21,13 +21,12 @@
  
  	<header class="gr-header">
  		<div class="container w3-center w3-padding-64">
- 			<h1 class="display-3 w3-center">Tinkerers Lab Inventory</h1>	
+ 			<h1 class="display-3 w3-center" style="font-size: 8vw;">Tinkerers Lab Inventory</h1>	
  		</div>
  	</header>
-<h1 class="display-3 w3-center"></h1>
-<div class="container w3-center w3-padding-64">
+<div class="container w3-center w3-padding-64 ">
 
-	<table class="table">
+	<table class="table" >
   <thead class="thead-dark">
     <tr>
       <th scope="col">Sr.no</th>
@@ -58,7 +57,7 @@
   </tbody>
 </table>
 
-<button class="w3-button w3-white w3-border w3-border-red w3-round-large display-4"> Coming Soon</button>
+<button class="w3-button w3-white w3-border w3-border-red w3-round-large display-4" style="font-size: 4vw;"> Coming Soon</button>
 	
 </div>
 </body>
