container error correction

--- a/inventory.html
+++ b/inventory.html
@@ -24,7 +24,7 @@
  			<h1 class="display-3 w3-center" style="font-size: 8vw;">Tinkerers Lab Inventory</h1>	
  		</div>
  	</header>
-<div class="container w3-center w3-padding-64 ">
+<div class="container w3-center w3-padding-64 " style="overflow-x:auto;">
 
 	<table class="table" >
   <thead class="thead-dark">
