--- a/inventory.html
+++ b/inventory.html
@@ -60,5 +60,19 @@
 <button class="w3-button w3-white w3-border w3-border-red w3-round-large display-4" style="font-size: 4vw;"> Coming Soon</button>
 	
 </div>
+
+
+<footer class="w3-container w3-padding-32 w3-center w3-opacity w3-black w3-xlarge" id="contact">
+	  <h1 class="display-4">Contact Us</h1>
+	  <div class="container">
+			<p>
+				<b>Address</b>:R-426 Block 6, IIT Patna-801103<br>
+				<b>Email Id</b>:tl_office@iitp.ac.in 
+			</p>	
+		</div>
+	  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+	  <i class="fa fa-instagram w3-hover-opacity"></i>
+	  <i class="fa fa-linkedin w3-hover-opacity"></i>
+	</footer>
 </body>
 </html>
