--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
 			</div>
 		</nav>
  	</div>
-	<header class="w3-display-container w3-content w3-wide parallax" style="max-width:1600px;" id="home">
+	<header class="w3-display-container w3-content w3-wide parallax w3-hide-small w3-hide-medium" style="max-width:1600px;" id="home">
 	  
+	  <div class="w3-display-left w3-padding-large">
+    	<h1 class="w3-animate-opacity" style="color: #FF1493;font-size: 6vw;"><b>Tinkerers Lab</b></h1>
+    	<h1 class="w3-animate-opacity w3-hide-small" style="color:white;font-size: 2vw;">Where ideas become innovations</h1>
+  	</div>
+</header>
+
+<header class="w3-display-container w3-content w3-wide w3-hide-large" style="max-width:1600px;" id="home">
+
+		<img src="main.jpg" style="width: 100%">  
 	  <div class="w3-display-left w3-padding-large">
     	<h1 class="w3-animate-opacity" style="color: #FF1493;font-size: 6vw;"><b>Tinkerers Lab</b></h1>
     	<h1 class="w3-animate-opacity w3-hide-small" style="color:white;font-size: 2vw;">Where ideas become innovations</h1>
@@ -207,7 +216,6 @@
 		</p>
 		<div class="w3-center">
 			<a href="inventory.html"><button class="w3-btn w3-round-xxlarge w3-purple">Visit Inventory for complete details</button></a>
-
 		</div>
 	</div>
 	<div class="w3-container w3-black w3-padding-64" id="gallery">
@@ -245,45 +253,51 @@
 			<h3 class="display-5">Prof Sudhir Kumar</h3>
 			<h5 class="display-6">PIC Tinkerers Lab</h5>
 		</div>
-		
 		<div class="w3-row-padding">
 			<div class="w3-col s4">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
-				<h3 class="display-5" >Manoj</h3><h3 class="w3-hide-small display-6"> Kumar</h3>
-				<h5 class="display-6">Coordinator</h5>
+				<h3 class="display-6 w3-hide-small w3-hide-medium" >Manoj Kumar</h3>
+				<h3 class="display-6">Manoj</h3>
+				<h5 class="display-7">Coordinator</h5>
 			</div>
 	
 			<div class="w3-col s4">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
-				<h3 class="display-5">Sumit</h3><h3 class="w3-hide-small"> Sourabh</h3>
+				<h3 class="display-5 w3-hide-small w3-hide-medium">Sumit Sourabh</h3>
+				<h3 class="display-6">Sumit</h3>
 				<h5 class="display-6">Coordinator</h5>
 			</div>
 			<div class="w3-col s4">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
-				<h3 class="display-5">Md.Azam</h3>
+				<h3 class="display-5 w3-hide-small w3-hide-medium">Md.Azam</h3>
+				<h3 class="display-6">Azam</h3>
 				<h5 class="display-6">Coordinator</h5>
 			</div>
 		</div>
 		<div class="w3-row-padding">
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
-				<h3 class="display-5">Akshat</h3><h3 class="w3-hide-small display-6"> Jain</h3>
+				<h3 class="display-5 w3-hide-small w3-hide-medium">Akshat Jain</h3>
+				<h3 class="display-6 team-text">Akshat</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 	
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="...">
-				<h3 class="display-5">Aayush</h3><h3 class="w3-hide-small display-6"> Shah</h3>
+				<h3 class="display-5 w3-hide-small w3-hide-medium">Aayush Shah</h3>
+				<h3 class="display-6 team-text">Aayush</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250">
-				<h3 class="display-5">Akash</h3><h3 class="w3-hide-small display-6"> Balaji</h3>
+				<h3 class="display-5 w3-hide-small w3-hide-medium">Akash Balaji</h3>
+				<h3 class="display-6 team-text">Akash</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 			<div class="w3-col s3">
 				<img class="thick-border teams team-pic" src="https://picsum.photos/300/250" alt="..."> 
-				<h3 class="display-5">Harsh </h3><h3 class="w3-hide-small display-6"> Shah</h3>
+				<h3 class="display-5 w3-hide-small w3-hide-medium">Harsh Shah</h3>
+				<h3 class="display-6 team-text">Harsh</h3>
 				<h5 class="display-6 w3-hide-small">Sub-Coordinator</h5>
 			</div>
 		</div>
